exports[`test renders correctly 1`] = `
<View
  style={undefined}>
  <ScrollView>
    <View
      style={undefined}>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            undefined,
            undefined,
          ]
        }>
        SIGN IN
      </Text>
      <View
        style={undefined}>
        <View
          style={undefined}>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={undefined}>
            Username or Email Address
          </Text>
        </View>
        <View
          style={undefined}>
          <TextInput
            autoCapitalize="none"
            autoCorrect={false}
            keyboardType="default"
            onChangeText={[Function]}
            returnKeyType="done"
            secureTextEntry={false}
            style={undefined}
            underlineColorAndroid="white" />
        </View>
      </View>
      <View
        style={undefined}>
        <View
          style={undefined}>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={undefined}>
            Password
          </Text>
        </View>
        <View
          style={undefined}>
          <TextInput
            autoCapitalize="none"
            autoCorrect={false}
            keyboardType="default"
            onChangeText={[Function]}
            returnKeyType="done"
            secureTextEntry={true}
            style={undefined}
            underlineColorAndroid="white" />
        </View>
      </View>
      <TouchableOpacity
        activeOpacity={0.2}
        onPress={[Function]}
        style={undefined}>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              undefined,
              undefined,
            ]
          }>
          Forget your password?
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        activeOpacity={0.5}
        disabled={true}
        onPress={[Function]}
        style={
          Array [
            undefined,
            undefined,
          ]
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={undefined}>
          Sign In
        </Text>
      </TouchableOpacity>
      <View
        style={undefined}>
        <View
          style={undefined} />
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={undefined}>
          OR
        </Text>
        <View
          style={undefined} />
      </View>
      <TouchableOpacity
        activeOpacity={0.5}
        disabled={false}
        onPress={[Function]}
        style={undefined}>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={undefined}>
          Continue without signing in
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        activeOpacity={0.5}
        disabled={false}
        onPress={[Function]}
        style={
          Array [
            undefined,
            undefined,
          ]
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={undefined}>
          Register for account
        </Text>
      </TouchableOpacity>
    </View>
  </ScrollView>
</View>
`;

exports[`test renders error message 1`] = `
<View
  style={undefined}>
  <ScrollView>
    <View
      style={undefined}>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            undefined,
            undefined,
          ]
        }>
        SIGN IN
      </Text>
      <View
        style={undefined}>
        <View
          style={undefined}>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={undefined}>
            Username or Email Address
          </Text>
        </View>
        <View
          style={undefined}>
          <TextInput
            autoCapitalize="none"
            autoCorrect={false}
            keyboardType="default"
            onChangeText={[Function]}
            returnKeyType="done"
            secureTextEntry={false}
            style={undefined}
            underlineColorAndroid="white" />
        </View>
      </View>
      <View
        style={undefined}>
        <View
          style={undefined}>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={undefined}>
            Password
          </Text>
        </View>
        <View
          style={undefined}>
          <TextInput
            autoCapitalize="none"
            autoCorrect={false}
            keyboardType="default"
            onChangeText={[Function]}
            returnKeyType="done"
            secureTextEntry={true}
            style={undefined}
            underlineColorAndroid="white" />
        </View>
      </View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            undefined,
            undefined,
          ]
        }>
        does not compute
      </Text>
      <TouchableOpacity
        activeOpacity={0.2}
        onPress={[Function]}
        style={undefined}>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              undefined,
              undefined,
            ]
          }>
          Forget your password?
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        activeOpacity={0.5}
        disabled={true}
        onPress={[Function]}
        style={
          Array [
            undefined,
            undefined,
          ]
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={undefined}>
          Sign In
        </Text>
      </TouchableOpacity>
      <View
        style={undefined}>
        <View
          style={undefined} />
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={undefined}>
          OR
        </Text>
        <View
          style={undefined} />
      </View>
      <TouchableOpacity
        activeOpacity={0.5}
        disabled={false}
        onPress={[Function]}
        style={undefined}>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={undefined}>
          Continue without signing in
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        activeOpacity={0.5}
        disabled={false}
        onPress={[Function]}
        style={
          Array [
            undefined,
            undefined,
          ]
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={undefined}>
          Register for account
        </Text>
      </TouchableOpacity>
    </View>
  </ScrollView>
</View>
`;
